# ai_arm_learning

./: .gitignore  README.md
gemm/Openblas/: CMakeLists.txt
gemm/Openblas/sample/: test1.cpp
gemm/Openblas/src/: matrix.cpp
x3/YOLOP-x3/: yolop_x3.py
x3/YOLOP-x3/lib/core/: general.py
x3/ocr/: crate_data.py  crnn.yaml  dbnet.yaml  demo_onnx.py  demo_x3.py  test.py
x3/ocr/crnn/: demo.py  infer_onnxruntime.py  infer_x3.py  onnx_simplify.py
x3/ocr/crnn/models/: crnn.py
x3/ocr/dbnet/: eval.py  infer_onnxruntime.py  infer_x3.py  predict.py
x3/ocr/dbnet/models/modules/: resnet.py  shufflenetv2.py
x3/ocr/utils/: utils.py
x3/paddleocr_2_x3/: change_ir.py  det_infer_onnx.py  det_infer_x3.py  infer_demo_x3.py  pp_ocr_det.yaml  pp_ocr_rec.yaml  rec_infer_onnx.py  rec_infer_x3.py
x3/readme/: bpu_resize.md  ocr.md  yolov5-seg.md
x3/x3_cpp_demo/: CMakeLists.txt
x3/x3_cpp_demo/_vscode/: settings.json
x3/x3_cpp_demo/include/: common.h
x3/x3_cpp_demo/src/: run_x3j.cc
x3/x3_inference/: CMakeLists.txt  README.md
x3/x3_inference/include/: bpu_resize.h  bpu_resize.hpp  common.hpp  detect.h  inference.hpp  run.h  yolo_detect.hpp
x3/x3_inference/sample/: resize.cc  resize_bgr.cc  resize_demo.cpp  resize_y_example.cc  yolo_demo.cpp  yolov5-seg.cpp
x3/x3_object_detection/: CMakeLists.txt
x3/x3_object_detection/include/: common.hpp  detect.h  inference.hpp  yolo_detect.hpp
x3/x3_object_detection/sample/: object_demo.cpp
x3/x3m_demo/: CMakeLists.txt  README.md
x3/x3m_demo/src/: run_x3.cc
x3/yolov5-7.0_seg/: run_onnx.py
x3/yolov5-7.0_seg_python/: readme.md  run_onnx.py  run_x3.py
x3/yolov5-deepsort-x3/: AIDetector_x3.py  demo.py  tracker.py  yolov5-deepsort.md
x3/yolov5-deepsort-x3/deep_sort/deep_sort/: deep_sort.py
x3/yolov5-deepsort-x3/deep_sort/deep_sort/deep/: feature_extractor.py
x3/yolov5-deepsort-x3/deep_sort/utils/: parser.py
x3j/x3m_demo/: README.md
x3j/x3m_demo/include/: common.h
x3j/x3m_demo/src/: run_x3j.cc
